--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,7 +2,7 @@ navbar_entries:
   - title: about
     url: about
   - title: Projects
-    url: blog
+    url: Github Releases
   - title: website
     url: 'https://www.abhinav.co'
 project_entries:
