home.yml: updated url in navbar_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,7 +2,7 @@ navbar_entries:
   - title: about
     url: about
   - title: Github Releases
-    url: Github Releases
+    url: 'https://darkflix.devilsdesigns.net'
   - title: website
     url: 'https://www.abhinav.co'
 project_entries:
