home.yml: updated title in navbar_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,7 +3,7 @@ navbar_entries:
     url: about
   - title: Github Repositories
     url: 'https://darkflix.devilsdesigns.net/Github-Repositories'
-  - title: website
+  - title: Home
     url: 'https://www.abhinav.co'
 project_entries:
   - title: Project 1
