home.yml: updated url in navbar_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,7 +4,7 @@ navbar_entries:
   - title: Github Repositories
     url: 'https://darkflix.devilsdesigns.net/Github-Repositories'
   - title: Home
-    url: 'https://www.abhinav.co'
+    url: 'https://www.devilsdesigns.net'
 project_entries:
   - title: Project 1
     url: overview-post
