--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,7 +9,7 @@ navbar_entries:
     url: lorem-ipsum
 project_entries:
   - title: DarkFlix
-    url: 'https://darkflix.devilsdesigns.net'
+    url: 'https://github.com/DevilsDesigns/Jellyfin-DarkFlix-Theme'
     desc: 'This is an example project, configured in _data/home.yml'
   - title: Project 2
     url: overview-post
