--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,7 +10,7 @@ navbar_entries:
 project_entries:
   - title: DarkFlix
     url: 'https://github.com/DevilsDesigns/Jellyfin-DarkFlix-Theme'
-    desc: 'This is an example project, configured in _data/home.yml'
+    desc: The best Dark Netlfix Clone theme for Jellyfin
   - title: Project 2
     url: overview-post
     desc: Projects are shown in card layout
